--- a/solution.ipynb
+++ b/solution.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Case study of the Rist Assesment GmbH"
+    "# Case study of the Risk Assesment GmbH"
    ]
   },
   {
@@ -50,13 +50,15 @@
     "- 44795\n",
     "- 48316\n",
     "\n",
-    "To avoid this errors, we avoid the column named *emp_title*."
+    "To avoid these errors, we drop the column named *emp_title*."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path = \"/home/jose/Learning/cases\"\n",
@@ -227,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for col in cat_cols(df):\n",
@@ -355,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -490,7 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = StandardScaler().fit_transform(df)\n",
